# 2019-Vision

./: ._Makefile  .gitignore  AngleFinder.cpp  AngleFinder.h  AngleFinder.hpp  Cargo.toml  Config.h  GripPipeline.cpp  GripPipeline.h  Makefile  README.md  WebCam.py  config.cpp  config.py  grip.py  images.py  main.cpp  main.py  runGrip.cpp  runGrip.h  rungrip.py  transform_example.py  ubu  white_tape.grip
RF-Tape/: AutoCalibrate.py  CANInterface.py  Constants.py  GetAngle.py  GetContours.py  GetDistance.py  GetDistanceAngleTwoCamera_Brandon.py  GetImage.py  HSVThreshold.py  ImageAnalysis.py  ImageAnalysis.py~  MeasureTape.py  NetworkTablesInterface.py  PairFinding.py  Printing.py  SampleImage.py  ScoringMetric.py  SocketsInterface.py  TwoCameraMeasurement.py  TwoCameraMeasurementConsolidation.py  WebCam.py  a.py  config.py  main.py  server.py  test.py  testNetworkTable.py
alignmentcode/: WebCam.py  gripCode.py  main.py
src/: ._Config.cpp  ._GetBoxes.cpp  ._PairFinding.cpp  ._ProcessFrame.cpp  ._main.cpp  AngleFinder.cpp  AngleFinder.hpp  Calibration.cpp  Calibration.hpp  Config.cpp  Config.hpp  GetAngle.cpp  GetAngle.hpp  GetBoxes.cpp  GetBoxes.hpp  GetDistance.cpp  GetDistance.hpp  GripPipeline.cpp  GripPipeline.hpp  PairFinding.cpp  PairFinding.hpp  ProcessFrame.cpp  ProcessFrame.hpp  TwoCameraMeasurement.cpp  TwoCameraMeasurement.hpp  WebCam.cpp  WebCam.hpp  contours.rs  main.cpp  main.rs  pair_finding.rs  scoring_metric.rs
ubuntu@tegra-4904/: ContourFinding.py  GetDistance.py  GetImage.py  PairFinding.py  Printing.py  RGB.xlsx  autocalibrate.py  main.py  (+1 more)
(+45 files in other folders)
