[package]
name = "vision-2019"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.23", default-features = false, features = ["opencv-41"] }
standard-vision = { git = "https://github.com/RoboticsTeam4904/standard-vision" }